Клиентская часть rest взаимодействия по оплате товаров. Хранение товаров в кеше Redis Тесты.
