# payment-service/src/main/java/ru/yandex/practicum/payment/controller/PaymentController.java
@@ -2,6 +2,7 @@ package ru.yandex.practicum.payment.controller;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ServerWebExchange;
@@ -16,24 +17,28 @@ import ru.yandex.practicum.payment.service.PaymentService;
 @RestController
 @RequiredArgsConstructor
 public class PaymentController implements PaymentApi {
-    PaymentService paymentService;
+    private final PaymentService paymentService;
 
     @Override
     public Mono<ResponseEntity<BalanceResponse>> getBalance(String userId, ServerWebExchange exchange) {
+        log.info("Запрос на получение баланса. userId: {}", userId);
         return paymentService.getBalance(userId)
                 .map(saldo -> {
                     BalanceResponse balanceResponse = new BalanceResponse(saldo);
                     return ResponseEntity.ok(balanceResponse);
                 })
                 .onErrorResume(IllegalArgumentException.class, e ->
-                        Mono.just(ResponseEntity.notFound().build())
+                        {
+                            log.error(e.getMessage());
+                            return Mono.just(ResponseEntity.notFound().build());
+                        }
                 );
     }
 
     @Override
-    public Mono<ResponseEntity<PaymentResponse>> processPayment(String userId, Mono<PaymentRequest> paymentRequest, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<PaymentResponse>> createPayment(String userId, Mono<PaymentRequest> paymentRequest, ServerWebExchange exchange) {
         return paymentRequest.flatMap(
-                request -> paymentService.processPayment(userId, request.getTotalSum())
+                request -> paymentService.createPayment(userId, request.getTotalSum())
                         .map(v -> {
                             PaymentResponse body = new PaymentResponse();
                             body.setStatus(PaymentStatus.SUCCESS);
@@ -41,16 +46,23 @@ public class PaymentController implements PaymentApi {
                             return ResponseEntity.ok(body);
                         })
                         .onErrorResume(IllegalArgumentException.class, e ->
-                                Mono.just(ResponseEntity.notFound().build())
+                                {
+                                    PaymentResponse response = genErrorResponse(e, userId);
+                                    return Mono.just(ResponseEntity.status(HttpStatus.NOT_FOUND).body(response));
+                                }
                         )
                         .onErrorResume(IllegalStateException.class, e -> {
-                            PaymentResponse body = new PaymentResponse();
-                            body.setStatus(PaymentStatus.ERROR);
-                            body.setDescription("Ошибка оплаты: " + e.getMessage());
-                            log.error("Ошибка оплаты. userId:" + userId + " " + e.getMessage());
-                            return Mono.just(ResponseEntity.badRequest().body(body));
+                            PaymentResponse response = genErrorResponse(e, userId);
+                            return Mono.just(ResponseEntity.badRequest().body(response));
                         })
         );
+    }
 
+    private PaymentResponse genErrorResponse(Exception e, String userId) {
+        log.error("Ошибка оплаты. userId:" + userId + " " + e.getMessage());
+        PaymentResponse body = new PaymentResponse();
+        body.setStatus(PaymentStatus.ERROR);
+        body.setDescription("Ошибка оплаты: " + e.getMessage());
+        return body;
     }
 }
